@@ -1,4 +1,6 @@
 1.11.0
+   - bug [11992] "Enkelte poster fejler ved indlæggelsen med diagnostics:  'Could not get a db-connection from the connection pool'"
+ESHarvester shutsdown the Datadock if it cant get a db connection within timelimit.
    - bug [13354] "ESHarvet får ikek fat i noget fra ES i trunk"
    - bug [13294] "Vedr. version 1.10: Katalogposter fejler med "Could not evaluate xpath expression to find registration number""
    - bug [13000] "FileHarvest.java kan fjernes fra OpenSearch"
